--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Workspace" %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "PMNG" %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -40,17 +40,24 @@
 
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
+        <%= link_to 'PMNG', root_path, class: 'navbar-brand' %>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Workspace</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+          <ul class="nav navbar-nav navbar-right">
+            <% if current_user %>
+              <li>
+                <%= link_to edit_user_registration_path, title: 'Edit Profile' do %>
+                  <i class="fa fa-user"></i> <%= truncate current_user.email, length: 25 %>
+                <% end %>
+              </li>
+              <li><%= link_to 'Log out', destroy_user_session_path, title: 'Log out', method: :delete %></li>
+            <% else %>
+              <li><%= link_to 'Sign In', new_user_session_path, title: 'Sign In' %></li>
+            <% end %>
           </ul>
         </div>
       </div>
@@ -58,25 +65,14 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
+        <div class="col-lg-12">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2016</p>
+        <p>&copy; PMNG 2016</p>
       </footer>
 
     </div> <!-- /container -->
