--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,15 @@
           <span class="icon-bar"></span>
         </button>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <ul class="nav navbar-nav">
+            <% if current_user %>
+              <li>
+                <%= link_to new_member_path do %>
+                  <i class="fa fa-user"></i> Add Members
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
               <li>
