--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
             <% if current_user %>
               <li>
                 <%= link_to new_member_path do %>
-                  <i class="fa fa-user"></i> Add Members
+                  <i class="fa fa-user-plus"></i> Add Members
                 <% end %>
               </li>
             <% end %>
