--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -58,6 +58,11 @@ footer {
   padding-right: 0px !important;
 }
 
+.no-side-padding {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
 .table tr td {
   a.main-link {
     color: #428bca;
