--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -20,6 +20,7 @@
         <td><%= project.expected_completion_date %></td>
         <td>
           <%= link_to t('.edit', default: t("helpers.links.edit")), edit_tenant_project_path(project, tenant_id: @tenant.id), class: 'btn btn-default btn-xs' %>
+          <%= link_to 'Edit Project Users', users_tenant_project_path(tenant_id: project.tenant_id, id: project.id), class: 'btn btn-default btn-xs' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       tenant_project_path(project, tenant_id: @tenant.id),
                       method: :delete,
