--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -34,6 +34,6 @@
 <% else %>
   <p>You don't have any projects yet.</p>
 <% end %>
-<% if @tenant.can_create_projects? %>
+<% if current_user.is_admin? %>
   <%= link_to 'New Project', new_tenant_project_path(tenant_id: @tenant.id), class: 'btn btn-primary' %>
 <% end %>
