--- a/app/views/projects/users.html.erb
+++ b/app/views/projects/users.html.erb
@@ -7,7 +7,7 @@
   <thead>
     <tr>
       <th>Email</th>
-      <th><%=t '.actions', default: t('helper.actions') %></th>
+      <th><%=t '.actions', default: t('helpers.actions') %></th>
     </tr>
   </thead>
   <tbody>
@@ -35,7 +35,7 @@
   <thead>
     <tr>
       <th>Email</th>
-      <th><%=t '.actions', default: t('helper.actions') %></th>
+      <th><%=t '.actions', default: t('helpers.actions') %></th>
     </tr>
   </thead>
   <tbody>
